[VULNERA] - The Scanner with Dependency scanning implemented. Thread locking with retry mechanism needs to be implemented